# libswiftnav

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  Dockerfile  Dockerfile.modern  Jenkinsfile  LICENSE  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  ci-build.sh  codecov.yml  docker-compose.yml  msvc.bat  travis-clang-format-check.sh  travis.sh
.github/workflows/: auto-cancellation.yaml  ci.yaml
bazel/: check.BUILD  configure_file.bzl  max_channels_config.bzl
cmake/: ClangTools.cmake
include/libswiftnav/: almanac.h  array_tools.h  bits.h  ch_meas.h  correct_iono_tropo.h  edc.h  ephemeris.h  glo_map.h  glonass_phase_biases.h  gnss_time.h  ionosphere.h  linear_algebra.h  logging.h  memcpy_s.h  nav_meas.h  pvt_result.h  set.h  shm.h  sid_set.h  signal.h  single_epoch_solver.h  troposphere.h
include/swiftnav/: almanac.h  array_tools.h  bits.h  bitstream.h  bytestream.h  ch_meas.h  common.h  config.h  config.h.in  constants.h  coord_system.h  correct_iono_tropo.h  decode_glo.h  edc.h  ephemeris.h  fifo_byte.h  float_equality.h  geoid_model.h  get_unaligned.h  glo_map.h  glonass_phase_biases.h  gnss.h  gnss_capabilities.h  gnss_time.h  ionosphere.h  leap_seconds.h  linear_algebra.h  logging.h  macro_overload.h  macros.h  memcpy_s.h  nav_meas.h  pvt_result.h  sbas_raw_data.h  set.h  shm.h  sid_set.h  signal.h  single_epoch_solver.h  subsystem_status_report.h  (+2 more)
libswiftnav/: almanac.c  almanac.h  array_tools.h  bits.c  bits.h  common.h  constants.h  coord_system.c  coord_system.h  correct_iono_tropo.c  correct_iono_tropo.h  edc.c  edc.h  ephemeris.c  ephemeris.h  glo_map.c  glo_map.h  glonass_phase_biases.c  glonass_phase_biases.h  gnss_time.c  gnss_time.h  ionosphere.c  ionosphere.h  linear_algebra.c  linear_algebra.h  logging.h  logging_common.c  memcpy_s.c  memcpy_s.h  nav_meas.c  nav_meas.h  pvt_result.h  set.c  set.h  shm.c  shm.h  sid_set.c  sid_set.h  signal.c  signal.h  (+4 more)
scripts/: gtx_convert.pl  leap_seconds_generator.py
src/: almanac.c  bits.c  coord_system.c  correct_iono_tropo.c  decode_glo.c  edc.c  ephemeris.c  fifo_byte.c  geoid_model.c  geoid_model.h  geoid_model_15_minute.c  geoid_model_1_degree.c  geoid_model_1_degree.inc  glo_map.c  glonass_phase_biases.c  gnss_time.c  ionosphere.c  linear_algebra.c  logging.c  logging_common.c  memcpy_s.c  nav_meas.c  set.c  shm.c  sid_set.c  signal.c  single_epoch_solver.c  subsystem_status_report.c  troposphere.c
tests/: CMakeLists.txt  check_almanac.c  check_bits.c  check_coord_system.c  check_decode_glo.c  check_edc.c  check_ephemeris.c  check_geoid_model.c  check_geoid_model.cc  check_glo_map.c  check_gnss_time.c  check_gnss_time_cpp.cc  check_ionosphere.c  check_linear_algebra.c  check_log.c  check_main.c  check_nav_meas.c  check_pedantic.cc  check_pvt.c  check_set.c  check_shm.c  check_sid_set.c  check_signal.c  check_subsystem_status_report.c  check_suites.h  check_troposphere.c  check_utils.h  test_almanac.cc  test_bits.cc  test_coord_system.cc  test_correct_iono_tropo.cc  test_data.h  test_decode_glo.cc  test_edc.cc  test_ephemeris.cc  test_geoid_model.cc  test_glo_map.cc  test_gnss_time.cc  test_gnss_time_cpp.cc  test_ionosphere.cc  (+10 more)
tests/common/: CMakeLists.txt  check_utils.c  check_utils.h
tools/: check2junit.py  requirements.txt
