load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_swiftnav//cc:defs.bzl", "UNIT", "swift_c_library", "swift_cc_test", "swift_cc_test_library")
load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "bool_flag")
load("//bazel:max_channels_config.bzl", "max_channels_config")

refresh_compile_commands(
    name = "gen_compile_commands",
    visibility = ["//visibility:public"],
)

int_flag(
    name = "max_channels",
    build_setting_default = 63,
)

bool_flag(
    name = "enable_stderr_logging",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "_enable_stderr_logging",
    flag_values = {"enable_stderr_logging": "true"},
)

max_channels_config(
    name = "max_channels_h",
    out = "max_channels.h",
    max_channels = ":max_channels",
    template = "src/max_channels.h.in",
)

swift_c_library(
    name = "swiftnav",
    srcs = [
        "src/almanac.c",
        "src/bits.c",
        "src/coord_system.c",
        "src/correct_iono_tropo.c",
        "src/decode_glo.c",
        "src/edc.c",
        "src/ephemeris.c",
        "src/fifo_byte.c",
        "src/geoid_model.c",
        "src/geoid_model.h",
        "src/geoid_model_15_minute.c",
        "src/geoid_model_15_minute.inc",
        "src/geoid_model_1_degree.c",
        "src/geoid_model_1_degree.inc",
        "src/glo_map.c",
        "src/glonass_phase_biases.c",
        "src/gnss_time.c",
        "src/ionosphere.c",
        "src/linear_algebra.c",
        "src/logging.c",
        "src/logging_common.c",
        "src/memcpy_s.c",
        "src/nav_meas.c",
        "src/set.c",
        "src/shm.c",
        "src/sid_set.c",
        "src/signal.c",
        "src/single_epoch_solver.c",
        "src/subsystem_status_report.c",
        "src/troposphere.c",
        ":max_channels_h",
    ],
    hdrs = [
        "include/swiftnav/almanac.h",
        "include/swiftnav/array_tools.h",
        "include/swiftnav/bits.h",
        "include/swiftnav/bitstream.h",
        "include/swiftnav/bytestream.h",
        "include/swiftnav/ch_meas.h",
        "include/swiftnav/common.h",
        "include/swiftnav/constants.h",
        "include/swiftnav/coord_system.h",
        "include/swiftnav/correct_iono_tropo.h",
        "include/swiftnav/decode_glo.h",
        "include/swiftnav/edc.h",
        "include/swiftnav/ephemeris.h",
        "include/swiftnav/fifo_byte.h",
        "include/swiftnav/float_equality.h",
        "include/swiftnav/geoid_model.h",
        "include/swiftnav/get_unaligned.h",
        "include/swiftnav/glo_map.h",
        "include/swiftnav/glonass_phase_biases.h",
        "include/swiftnav/gnss_capabilities.h",
        "include/swiftnav/gnss_time.h",
        "include/swiftnav/ionosphere.h",
        "include/swiftnav/leap_seconds.h",
        "include/swiftnav/linear_algebra.h",
        "include/swiftnav/logging.h",
        "include/swiftnav/macro_overload.h",
        "include/swiftnav/macros.h",
        "include/swiftnav/memcpy_s.h",
        "include/swiftnav/nav_meas.h",
        "include/swiftnav/pvt_result.h",
        "include/swiftnav/sbas_raw_data.h",
        "include/swiftnav/set.h",
        "include/swiftnav/shm.h",
        "include/swiftnav/sid_set.h",
        "include/swiftnav/signal.h",
        "include/swiftnav/single_epoch_solver.h",
        "include/swiftnav/subsystem_status_report.h",
        "include/swiftnav/swift_strnlen.h",
        "include/swiftnav/troposphere.h",
    ],
    copts = ["-UNDEBUG"],
    local_defines = select({
        "_enable_stderr_logging": ["LIBSWIFTNAV_ENABLE_STDERR_LOGGING=ON"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    nocopts = [
        "-Wconversion",
        "-Wstack-protector",
    ],
    textual_hdrs = [
        "src/signal.c",
        "src/geoid_model.c",
    ],
    visibility = ["//visibility:public"],
)

swift_cc_test(
    name = "swiftnav-test",
    srcs = [
        "tests/check_utils.h",
        "tests/test_almanac.cc",
        "tests/test_bits.cc",
        "tests/test_coord_system.cc",
        "tests/test_correct_iono_tropo.cc",
        "tests/test_data.h",
        "tests/test_decode_glo.cc",
        "tests/test_edc.cc",
        "tests/test_ephemeris.cc",
        "tests/test_geoid_model.cc",
        "tests/test_glo_map.cc",
        "tests/test_gnss_time.cc",
        "tests/test_gnss_time_cpp.cc",
        "tests/test_ionosphere.cc",
        "tests/test_linear_algebra.cc",
        "tests/test_log.cc",
        "tests/test_nav_meas.cc",
        "tests/test_pvt.cc",
        "tests/test_set.cc",
        "tests/test_shm.cc",
        "tests/test_sid_set.cc",
        "tests/test_signal.cc",
        "tests/test_subsystem_status_report.cc",
        "tests/test_troposphere.cc",
    ],
    type = UNIT,
    timeout="short",
    deps = [
        "//:swiftnav",
        "@gtest//:gtest_main",
    ],
)

filegroup(
    name = "clang_format_config",
    srcs = [".clang-format"],
    visibility = ["//visibility:public"],
)
