workspace(name = "libswiftnav")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_swiftnav",
    sha256 = "4feaefe3c1cf0007b0ce8c1af296884a7a1ac052fd79410943d4a4dd96e9f94b",
    strip_prefix = "rules_swiftnav-eb7e182d1663d1803f37ac0e9798ce91de3b6722",
    url = "https://github.com/swift-nav/rules_swiftnav/archive/eb7e182d1663d1803f37ac0e9798ce91de3b6722.tar.gz",
)

load("@rules_swiftnav//cc:repositories.bzl", "swift_cc_toolchain")

swift_cc_toolchain()

register_swift_cc_toolchains()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
http_archive(
    name = "hedron_compile_commands",
    sha256 = "4b251a482a85de6c5cb0dc34c5671e73190b9ff348e9979fa2c033d81de0f928",
    strip_prefix = "bazel-compile-commands-extractor-5bb5ff2f32d542a986033102af771aa4206387b9",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/5bb5ff2f32d542a986033102af771aa4206387b9.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

new_local_repository(
    name = "check",
    build_file = "@rules_swiftnav//third_party:check.BUILD",
    path = "third_party/check",
)
